ParserParser.java
// Generated from Parser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		D_UGL_ZAGRADA=1, L_UGL_ZAGRADA=2, D_VIT_ZAGRADA=3, L_VIT_ZAGRADA=4, D_ZAGRADA=5, 
		L_ZAGRADA=6, TOCKAZAREZ=7, ZAREZ=8, OP_BIN_XILI=9, OP_BIN_ILI=10, OP_BIN_I=11, 
		OP_ILI=12, OP_I=13, OP_TILDA=14, OP_NEG=15, OP_NEQ=16, OP_EQ=17, OP_GTE=18, 
		OP_GT=19, OP_LTE=20, OP_LT=21, OP_PRIDRUZI=22, OP_MOD=23, OP_DIJELI=24, 
		OP_PUTA=25, MINUS=26, PLUS=27, OP_DEC=28, OP_INC=29, KR_WHILE=30, KR_VOID=31, 
		KR_RETURN=32, KR_INT=33, KR_IF=34, KR_FOR=35, KR_ELSE=36, KR_CONTINUE=37, 
		KR_CONST=38, KR_CHAR=39, KR_BREAK=40, BROJ=41, WS=42, IDN=43, ZNAK=44, 
		NIZ_ZNAKOVA=45;
	public static final int
		RULE_program = 0, RULE_lista_izraza_pridruzivanja = 1, RULE_inicijalizator = 2, 
		RULE_izravni_deklarator = 3, RULE_init_deklarator = 4, RULE_lista_init_deklaratora = 5, 
		RULE_deklaracija = 6, RULE_lista_deklaracija = 7, RULE_deklaracija_parametra = 8, 
		RULE_lista_parametara = 9, RULE_definicija_funkcije = 10, RULE_vanjska_deklaracija = 11, 
		RULE_prijevodna_jedinica = 12, RULE_naredba_skoka = 13, RULE_naredba_petlje = 14, 
		RULE_naredba_grananja = 15, RULE_izraz_naredba = 16, RULE_naredba = 17, 
		RULE_lista_naredbi = 18, RULE_slozena_naredba = 19, RULE_izraz = 20, RULE_izraz_pridruzivanja = 21, 
		RULE_log_ili_izraz = 22, RULE_log_i_izraz = 23, RULE_bin_ili_izraz = 24, 
		RULE_bin_xili_izraz = 25, RULE_bin_i_izraz = 26, RULE_jednakosni_izraz = 27, 
		RULE_odnosni_izraz = 28, RULE_aditivni_izraz = 29, RULE_multiplikativni_izraz = 30, 
		RULE_specifikator_tipa = 31, RULE_ime_tipa = 32, RULE_cast_izraz = 33, 
		RULE_unarni_operator = 34, RULE_unarni_izraz = 35, RULE_lista_argumenata = 36, 
		RULE_postfiks_izraz = 37, RULE_primarni_izraz = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "lista_izraza_pridruzivanja", "inicijalizator", "izravni_deklarator", 
			"init_deklarator", "lista_init_deklaratora", "deklaracija", "lista_deklaracija", 
			"deklaracija_parametra", "lista_parametara", "definicija_funkcije", "vanjska_deklaracija", 
			"prijevodna_jedinica", "naredba_skoka", "naredba_petlje", "naredba_grananja", 
			"izraz_naredba", "naredba", "lista_naredbi", "slozena_naredba", "izraz", 
			"izraz_pridruzivanja", "log_ili_izraz", "log_i_izraz", "bin_ili_izraz", 
			"bin_xili_izraz", "bin_i_izraz", "jednakosni_izraz", "odnosni_izraz", 
			"aditivni_izraz", "multiplikativni_izraz", "specifikator_tipa", "ime_tipa", 
			"cast_izraz", "unarni_operator", "unarni_izraz", "lista_argumenata", 
			"postfiks_izraz", "primarni_izraz"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "']'", "'['", "'}'", "'{'", "')'", "'('", "';'", "','", "'^'", 
			"'|'", "'&'", "'||'", "'&&'", "'~'", "'!'", "'!='", "'=='", "'>='", "'>'", 
			"'<='", "'<'", "'='", "'%'", "'/'", "'*'", "'-'", "'+'", "'--'", "'++'", 
			"'while'", "'void'", "'return'", "'int'", "'if'", "'for'", "'else'", 
			"'continue'", "'const'", "'char'", "'break'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "D_UGL_ZAGRADA", "L_UGL_ZAGRADA", "D_VIT_ZAGRADA", "L_VIT_ZAGRADA", 
			"D_ZAGRADA", "L_ZAGRADA", "TOCKAZAREZ", "ZAREZ", "OP_BIN_XILI", "OP_BIN_ILI", 
			"OP_BIN_I", "OP_ILI", "OP_I", "OP_TILDA", "OP_NEG", "OP_NEQ", "OP_EQ", 
			"OP_GTE", "OP_GT", "OP_LTE", "OP_LT", "OP_PRIDRUZI", "OP_MOD", "OP_DIJELI", 
			"OP_PUTA", "MINUS", "PLUS", "OP_DEC", "OP_INC", "KR_WHILE", "KR_VOID", 
			"KR_RETURN", "KR_INT", "KR_IF", "KR_FOR", "KR_ELSE", "KR_CONTINUE", "KR_CONST", 
			"KR_CHAR", "KR_BREAK", "BROJ", "WS", "IDN", "ZNAK", "NIZ_ZNAKOVA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Prijevodna_jedinicaContext prijevodna_jedinica() {
			return getRuleContext(Prijevodna_jedinicaContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ParserParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			prijevodna_jedinica(0);
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_izraza_pridruzivanjaContext extends ParserRuleContext {
		public Lista_izraza_pridruzivanjaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_izraza_pridruzivanja; }
	 
		public Lista_izraza_pridruzivanjaContext() { }
		public void copyFrom(Lista_izraza_pridruzivanjaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Lista_izraza_pridruzivanja1Context extends Lista_izraza_pridruzivanjaContext {
		public Izraz_pridruzivanjaContext izraz_pridruzivanja() {
			return getRuleContext(Izraz_pridruzivanjaContext.class,0);
		}
		public Lista_izraza_pridruzivanja1Context(Lista_izraza_pridruzivanjaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitLista_izraza_pridruzivanja1(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Lista_izraza_pridruzivanja2Context extends Lista_izraza_pridruzivanjaContext {
		public Lista_izraza_pridruzivanjaContext lista_izraza_pridruzivanja() {
			return getRuleContext(Lista_izraza_pridruzivanjaContext.class,0);
		}
		public TerminalNode ZAREZ() { return getToken(ParserParser.ZAREZ, 0); }
		public Izraz_pridruzivanjaContext izraz_pridruzivanja() {
			return getRuleContext(Izraz_pridruzivanjaContext.class,0);
		}
		public Lista_izraza_pridruzivanja2Context(Lista_izraza_pridruzivanjaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitLista_izraza_pridruzivanja2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lista_izraza_pridruzivanjaContext lista_izraza_pridruzivanja() throws RecognitionException {
		return lista_izraza_pridruzivanja(0);
	}

	private Lista_izraza_pridruzivanjaContext lista_izraza_pridruzivanja(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Lista_izraza_pridruzivanjaContext _localctx = new Lista_izraza_pridruzivanjaContext(_ctx, _parentState);
		Lista_izraza_pridruzivanjaContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_lista_izraza_pridruzivanja, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Lista_izraza_pridruzivanja1Context(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(82);
			izraz_pridruzivanja();
			}
			_ctx.stop = _input.LT(-1);
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Lista_izraza_pridruzivanja2Context(new Lista_izraza_pridruzivanjaContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_lista_izraza_pridruzivanja);
					setState(84);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(85);
					match(ZAREZ);
					setState(86);
					izraz_pridruzivanja();
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicijalizatorContext extends ParserRuleContext {
		public InicijalizatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicijalizator; }
	 
		public InicijalizatorContext() { }
		public void copyFrom(InicijalizatorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Inicijalizator1Context extends InicijalizatorContext {
		public Izraz_pridruzivanjaContext izraz_pridruzivanja() {
			return getRuleContext(Izraz_pridruzivanjaContext.class,0);
		}
		public Inicijalizator1Context(InicijalizatorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitInicijalizator1(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Inicijalizator2Context extends InicijalizatorContext {
		public TerminalNode L_VIT_ZAGRADA() { return getToken(ParserParser.L_VIT_ZAGRADA, 0); }
		public Lista_izraza_pridruzivanjaContext lista_izraza_pridruzivanja() {
			return getRuleContext(Lista_izraza_pridruzivanjaContext.class,0);
		}
		public TerminalNode D_VIT_ZAGRADA() { return getToken(ParserParser.D_VIT_ZAGRADA, 0); }
		public Inicijalizator2Context(InicijalizatorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitInicijalizator2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicijalizatorContext inicijalizator() throws RecognitionException {
		InicijalizatorContext _localctx = new InicijalizatorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inicijalizator);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case L_ZAGRADA:
			case OP_TILDA:
			case OP_NEG:
			case MINUS:
			case PLUS:
			case OP_DEC:
			case OP_INC:
			case BROJ:
			case IDN:
			case ZNAK:
			case NIZ_ZNAKOVA:
				_localctx = new Inicijalizator1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				izraz_pridruzivanja();
				}
				break;
			case L_VIT_ZAGRADA:
				_localctx = new Inicijalizator2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(L_VIT_ZAGRADA);
				setState(94);
				lista_izraza_pridruzivanja(0);
				setState(95);
				match(D_VIT_ZAGRADA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Izravni_deklaratorContext extends ParserRuleContext {
		public Izravni_deklaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_izravni_deklarator; }
	 
		public Izravni_deklaratorContext() { }
		public void copyFrom(Izravni_deklaratorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Izravni_deklarator3Context extends Izravni_deklaratorContext {
		public TerminalNode IDN() { return getToken(ParserParser.IDN, 0); }
		public TerminalNode L_ZAGRADA() { return getToken(ParserParser.L_ZAGRADA, 0); }
		public TerminalNode KR_VOID() { return getToken(ParserParser.KR_VOID, 0); }
		public TerminalNode D_ZAGRADA() { return getToken(ParserParser.D_ZAGRADA, 0); }
		public Izravni_deklarator3Context(Izravni_deklaratorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitIzravni_deklarator3(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Izravni_deklarator4Context extends Izravni_deklaratorContext {
		public TerminalNode IDN() { return getToken(ParserParser.IDN, 0); }
		public TerminalNode L_ZAGRADA() { return getToken(ParserParser.L_ZAGRADA, 0); }
		public Lista_parametaraContext lista_parametara() {
			return getRuleContext(Lista_parametaraContext.class,0);
		}
		public TerminalNode D_ZAGRADA() { return getToken(ParserParser.D_ZAGRADA, 0); }
		public Izravni_deklarator4Context(Izravni_deklaratorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitIzravni_deklarator4(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Izravni_deklarator1Context extends Izravni_deklaratorContext {
		public TerminalNode IDN() { return getToken(ParserParser.IDN, 0); }
		public Izravni_deklarator1Context(Izravni_deklaratorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitIzravni_deklarator1(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Izravni_deklarator2Context extends Izravni_deklaratorContext {
		public TerminalNode IDN() { return getToken(ParserParser.IDN, 0); }
		public TerminalNode L_UGL_ZAGRADA() { return getToken(ParserParser.L_UGL_ZAGRADA, 0); }
		public TerminalNode BROJ() { return getToken(ParserParser.BROJ, 0); }
		public TerminalNode D_UGL_ZAGRADA() { return getToken(ParserParser.D_UGL_ZAGRADA, 0); }
		public Izravni_deklarator2Context(Izravni_deklaratorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitIzravni_deklarator2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Izravni_deklaratorContext izravni_deklarator() throws RecognitionException {
		Izravni_deklaratorContext _localctx = new Izravni_deklaratorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_izravni_deklarator);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Izravni_deklarator1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(IDN);
				}
				break;
			case 2:
				_localctx = new Izravni_deklarator2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(IDN);
				setState(101);
				match(L_UGL_ZAGRADA);
				setState(102);
				match(BROJ);
				setState(103);
				match(D_UGL_ZAGRADA);
				}
				break;
			case 3:
				_localctx = new Izravni_deklarator3Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(IDN);
				setState(105);
				match(L_ZAGRADA);
				setState(106);
				match(KR_VOID);
				setState(107);
				match(D_ZAGRADA);
				}
				break;
			case 4:
				_localctx = new Izravni_deklarator4Context(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(108);
				match(IDN);
				setState(109);
				match(L_ZAGRADA);
				setState(110);
				lista_parametara(0);
				setState(111);
				match(D_ZAGRADA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Init_deklaratorContext extends ParserRuleContext {
		public Init_deklaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init_deklarator; }
	 
		public Init_deklaratorContext() { }
		public void copyFrom(Init_deklaratorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Init_deklarator1Context extends Init_deklaratorContext {
		public Izravni_deklaratorContext izravni_deklarator() {
			return getRuleContext(Izravni_deklaratorContext.class,0);
		}
		public Init_deklarator1Context(Init_deklaratorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitInit_deklarator1(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Init_deklarator2Context extends Init_deklaratorContext {
		public Izravni_deklaratorContext izravni_deklarator() {
			return getRuleContext(Izravni_deklaratorContext.class,0);
		}
		public TerminalNode OP_PRIDRUZI() { return getToken(ParserParser.OP_PRIDRUZI, 0); }
		public InicijalizatorContext inicijalizator() {
			return getRuleContext(InicijalizatorContext.class,0);
		}
		public Init_deklarator2Context(Init_deklaratorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitInit_deklarator2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Init_deklaratorContext init_deklarator() throws RecognitionException {
		Init_deklaratorContext _localctx = new Init_deklaratorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_init_deklarator);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new Init_deklarator1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				izravni_deklarator();
				}
				break;
			case 2:
				_localctx = new Init_deklarator2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				izravni_deklarator();
				setState(117);
				match(OP_PRIDRUZI);
				setState(118);
				inicijalizator();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
